--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <script src="./script.js"></script>
     <script src="./script_02.js"></script>
+    <script src="./script_03.js"></script>
   </body>
 </html>
