added lesson 4 (task 1-11)

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <script src="./script.js"></script>
     <script src="./script_02.js"></script>
     <script src="./script_03.js"></script>
+    <script src="./script_04.js"></script>
   </body>
 </html>
