--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <script src="./script_02.js"></script>
     <script src="./script_03.js"></script>
     <script src="./script_04.js"></script>
+    <script src="./script_05.js"></script>
   </body>
 </html>
